<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/siteAddress" />
	<EditText android:id="@+id/siteAddress" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:hint="@string/siteAddressHint"
		android:inputType="textUri" />

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/password" />
	<EditText android:id="@+id/password" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:inputType="textPassword" />

	<Button android:text="@string/generateBtn" android:id="@+id/generateBtn"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />

	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/hashedPassword" />
	<EditText android:id="@+id/hashedPassword"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:editable="false" />
</LinearLayout>
